--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
               uses: Swatinem/rust-cache@v2
 
             - name: Build
-              run: cargo build --release --lib
+              run: cargo build
               continue-on-error: false
 
             - name: Format
