fix: install dependencies

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,9 @@ jobs:
             - name: Install stable toolchain
               run: rustup toolchain install stable
 
+            - name: Install dependencies
+              run: sudo apt-get install libpango1.0-dev
+
             - name: Cache dependencies
               uses: Swatinem/rust-cache@v2
 
