--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,12 +25,16 @@ jobs:
             - name: Cache dependencies
               uses: Swatinem/rust-cache@v2
 
+            - name: Check
+              run: cargo check
+              continue-on-error: false
+
             - name: Build
               run: cargo build
               continue-on-error: false
 
             - name: Format
-              run: cargo fmt --check && exit 1
+              run: cargo fmt --check
               continue-on-error: false
 
             - name: Lint
